[project]
name = "building-an-ai-agent-from-scratch-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "google>=3.0.0",
    "ipykernel>=7.0.1",
    "openai>=2.2.0",
    "python-dotenv>=1.1.1",
]
